--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Users</title>
+  <meta charset="UTF-8">
+  <title>Users</title>
 </head>
 <body>
 
 <div th:each="user : ${users}">
-    <a th:href="@{/admin/edit/{id}(id=${user.getId()})}" th:text="${user.getName()}">user</a>
+  <a th:href="@{/admin/{id}(id=${user.getId()})}" th:text="${user.getName()}">user</a>
 </div>
 
-<a href="/admin/new">Create new user</a>
+<a href="/new">Create new user</a>
 </body>
 </html>
